# PhysicsForGames

./: .gitignore
PhysicsDemo/: CMakeLists.txt  Generate.cmd
PhysicsDemo/Source/Executables/PhysicsDemo/: PhysicsDemo.cpp  World.cpp  World.h
PhysicsDemo/Source/Libraries/Math/: Camera.h  Geometry.h  Graph.h  MathDebug.h  MathTypes.h  Physics.h  Random.cpp  Random.h
PhysicsDemo/Source/Libraries/Platform/: Application.cpp  Application.h  Debugger.cpp  Debugger.h  Modal.cpp  Modal.h  OS.h  OSWindow.cpp  OSWindow.h  PlatformCore.h  PlatformDebug.h  Singleton.h  Tactual.cpp  Tactual.h  Timer.cpp  Timer.h  Window.cpp  Window.h  WindowedApplication.cpp  WindowedApplication.h
PhysicsDemo/Source/Libraries/Systems/: Collision.cpp  Collision.h  Components.h  Entity.h  Graphics.cpp  Graphics.h  Simulation.cpp  Simulation.h
PhysicsDemo/Source/Libraries/Visual/: LICENSE  MeshData.cpp  MeshData.h  RenderingContext.cpp  RenderingContext.h  Visual.cpp  Visual.h  VisualDebug.h  VisualGeometry.cpp  VisualGeometry.h
PhysicsDemo/Source/Libraries/Visual/DearImGui/: ImGuiContext.cpp  ImGuiContext.h
PhysicsDemo/Source/Libraries/Visual/OpenGL/: FunctionBindings.h  OpenGL.cpp  OpenGL.h
PhysicsDemo/Source/Libraries/Visual/OpenGL/KHR/: glext.h
